<resources>
    <string name="app_name">Meal4u</string>
    <string name="tv_nfs">Nearby Food Services</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="vendor_title">Vendor Title</string>
    <string name="vendor_workDays">Mon to Fri</string>
    <string name="hyphen">  -  </string>
    <string name="vendor_priceRange">$00 to $00</string>
    <string name="vendor_rating">0.0</string>
    <string name="nv_dashboard">Dashboard</string>
    <string name="nb_orders">Orders</string>
    <string name="nb_profile">Profile</string>
    <string name="package_name">Package Name</string>
    <string name="package_cost">00</string>
    <string name="package_weekday">Weekday</string>
    <string name="package_menu">0 xxxxx + 0 xxxxx + 0 xxxxx + xxxxx</string>
    <string name="hello">Hello, Foodie!</string>
    <string name="logout">Logout</string>
    <string name="menu_monday">Mon : </string>
    <string name="menu_tuesday">Tue : </string>
    <string name="menu_wednesday">Wed : </string>
    <string name="menu_thursday">Thu : </string>
    <string name="menu_friday">Fri : </string>
    <string name="menu_saturday">Sat : </string>
    <string name="menu_sunday">Sun : </string>
    <string name="btn_place_order">Place Order</string>
    <string name="package_cost_label">Cost: $</string>
    <string name="user_first_name">firstName</string>
    <string name="user_last_name">lastName</string>
    <string name="user_email">user@email.com</string>
    <string name="user_mobile">0000000000</string>
    <string name="user_full_address">123 Name Street, Waterloo ON X0X 0X0</string>
    <string name="profile_description">profile_description</string>
    <string name="create_free_account">Create Free Account</string>
    <string name="tax_delivery"><![CDATA[Tax & Delivery]]></string>
    <string name="package_cost_text">Package Cost</string>

    <string-array name="locations">
        <item>Waterloo, ON</item>
        <item>Kitchener, ON</item>
        <item>Cambridge, ON</item>
        <item>Guelph, ON</item>
    </string-array>
</resources>