<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VendorDetails"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_vendorDetails"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:src="@drawable/sample_vendor_img1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_vn_vendorDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vendor_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:padding="10dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingHorizontal="15dp"
            android:gravity="end">

            <TextView
                android:id="@+id/tv_vr_vendorDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vendor_rating"
                android:background="@drawable/rounded_corner_vr"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:paddingHorizontal="10dp"
                android:paddingVertical="3dp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_vt_vendorDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vendor_title"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_packages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"/>

</LinearLayout>