<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:tag="Vendor Packages">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_packages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        tools:ignore="PrivateResource">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cv_tv_packageName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/package_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:padding="10dp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingHorizontal="15dp"
                    android:gravity="end">

                    <TextView
                        android:id="@+id/cv_tv_packageCost_sign"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/package_cost_label"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:paddingHorizontal="3dp"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/cv_tv_packageCost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/package_cost"
                        android:background="@drawable/rounded_corner_vr"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:paddingHorizontal="7dp"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pkg_tv_monday"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_monday"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
                
                <TextView
                    android:id="@+id/pkg_tv_monday_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="00 XXXXX + 00 XXXXX + XXXXX"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pkg_tv_tuesday"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_tuesday"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                <TextView
                    android:id="@+id/pkg_tv_tuesday_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="00 XXXXX + 00 XXXXX + XXXXX"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pkg_tv_wednesday"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_wednesday"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                <TextView
                    android:id="@+id/pkg_tv_wednesday_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="00 XXXXX + 00 XXXXX + XXXXX"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pkg_tv_thursday"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_thursday"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                <TextView
                    android:id="@+id/pkg_tv_thursday_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="00 XXXXX + 00 XXXXX + XXXXX"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pkg_tv_friday"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_friday"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                <TextView
                    android:id="@+id/pkg_tv_friday_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="00 XXXXX + 00 XXXXX + XXXXX"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pkg_tv_saturday"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_saturday"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                <TextView
                    android:id="@+id/pkg_tv_saturday_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="00 XXXXX + 00 XXXXX + XXXXX"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pkg_tv_sunday"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_sunday"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                <TextView
                    android:id="@+id/pkg_tv_sunday_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="00 XXXXX + 00 XXXXX + XXXXX"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>